<package format="2">
    <name>metis</name>
    <version>0.0.1</version>
    <description>
	Files for planning the various tasks for AUVSI
    </description>
    <maintainer email="akagi94@github.com">akagi94</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>uav_msgs</depend>
    <depend>tools</depend>
    <depend>rosplane</depend>

</package>
